# PyDynSM

./: .gitignore  CIEM5000-MSS-Python4.1-Modal analysis of 1D systems.ipynb  DM_shell.py  Instructions_1D_EB_beam.py  LICENSE  MANIFEST.in  Matrix_Method_Dynamics - Notebook 3.1_theory class.ipynb  Matrix_Method_Dynamics - Notebook 3.2_FFT included.ipynb  Matrix_Method_Dynamics - Notebook 3.3_solved.ipynb  Notebook for 1D EB beam.ipynb  Notebook.ipynb  README.md  dev_environment.yml  environment.yml  frame_slender.py  main.py  main_1drodjupyterbook_q.py  main_assignment2_modes.py  main_comparison_notebook3.py  main_notebook3.1.py  main_notebook4.1.py  main_simplysupported_beam_modes.py  main_test.py  main_test_frame_plotting.py  main_test_plotting_module_single_elem.py  pyproject.toml  test_multiple_elements.py  test_multiple_elements_beam+beam.py  test_multiple_elements_rod+rod.py  test_new_nodal_system.py
.github/workflows/: manual-testpypi.yml  publish-testpypi.yml  python-publish_pypi.yml
assignments/: eigenvalues.csv  test_assignment2_Q2.py  test_assignment2_Q3.py  test_assignment2_Q4.py  test_assignment2_modes.py  test_assignment2_modes1.py
docs/: release_guide.md
docs/architecture/: architecture.md  dependencies.md  onboarding.md
docs/architecture/flows/: connectivity_analysis.md  model_creation.md  post_processing.md  static_dynamic_analysis.md  visualization.md
docs/architecture/subsystems/: analysis.md  assembler.md  elements.md  logging.md  plotter.md  sections.md
examples/: Examples_functionality.py  frame_slender.py  main_assignment2_5000.py  main_notebook3.1.py  main_notebook4.1.py  main_notebook4.1_timedomainresponse.py  test_ssb.py
notebooks/: CIEM5000-MSS-Python4.1-Modal analysis of 1D systems - Copy.ipynb  CIEM5000-MSS-Python4.2-FDM of analysis of frame structure.ipynb  Matrix_Method_Dynamics - Notebook 3.3_solved.ipynb  Matrix_Method_Dynamics - Notebook 3.3_student.ipynb  Notebook for 1D EB beam.ipynb  Notebook for 1D rod Foun.ipynb  Notebook for 1D rod.ipynb
pydynsm/: __init__.py  assembler.py  constrainer.py  element.py  node.py
pydynsm/analysis/: __init__.py  analysis.py  dofs.py  element.py
pydynsm/analysis/analysis_new/: __init__.py  analysis.py  dofs.py  element.py  node.py
pydynsm/analysis/analysis_old/: element.py
pydynsm/elements/: 1D_rod_exp.py  1D_rod_foundation.py  __init__.py  eb_beam.py  eb_beam_exp.py  eb_beam_foundation.py  eb_beam_tensioned.py  example.py  localelements.py  rayleigh_beam.py  rb_rod.py  rl_rod.py  rod_1D_exp.py  rod_1D_foundation.py  rod_1d.py  rod_1d_exp.py  structuralelement.py  tensioned_eb_beam.py  timoshenko_beam.py
pydynsm/logging/: __init__.py
pydynsm/plotter/: structureplotter.py
src/pydynsm/: __init__.py  assembler.py
src/pydynsm/analysis/: analysis.py  element.py  node.py
src/pydynsm/elements/: __init__.py  eb_beam.py  eb_beam_exp.py  eb_beam_foundation.py  eb_beam_foundation_end_attachment.py  eb_beam_tensioned.py  rayleigh_beam.py  rb_rod.py  rl_rod.py  rod_1D_exp.py  rod_1D_foundation.py  rod_1d.py  shear_beam_1D_exp.py  structuralelement.py  timoshenko_beam.py
tests/: elements_test.py  hinge_test 1.py  main_test.py  test_assignment2_FRF.py  test_assignment2_modes.py  test_multiple_elements.py  test_multiple_elements_beam+rod.py  test_new_nodal_system.py  test_ssb.py
(+13 files in other folders)
