[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDynSM"
version = "0.3.0rc2"
description = "A Dynamic Stiffness Matrix method solver."
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Technical University Delft", email = "r.j.vanleijden-1@tudelft.nl" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

license = { file = "LICENSE" }

# Optional: 
# [project.urls]
# Homepage = "https://github.com/yourusername/pydynsm"
# Issues = "https://github.com/yourusername/pydynsm/issues"

[tool.setuptools]
# We use a src-layout
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Auto-discover packages under src/
where = ["src"]
